# PointCloud_Texture_Mapping

./: CMakeLists.txt  README.md  main.cpp
data/: calibration_params.yml  test.pcd
